--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.4.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-day-picker": "^5.2.1",
     "@types/react-dom": "^19",
     "daisyui": "^4.12.22",
     "postcss": "^8",
