--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-clock": "^5.1.0",
     "react-day-picker": "^9.4.4",
     "react-dom": "^18.3.1",
