--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-clock": "^5.1.0",
     "react-day-picker": "^9.4.4",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^2.5.5",
